log
Thu 21 Mar 2024 01:08:41 AM UTC: 
 exercises.c | 27 +++++++++++----------------
 1 file changed, 11 insertions(+), 16 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:15: error: ‘lista’ undeclared (first use in this function)
   46 |     pushFront(lista, &i);
      |               ^~~~~
exercises.c:46:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bd83ce6
Thu 21 Mar 2024 01:10:19 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:15: error: ‘lista’ undeclared (first use in this function)
   46 |     pushFront(lista, &i);
      |               ^~~~~
exercises.c:46:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a58240b
Thu 21 Mar 2024 01:11:14 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
64bacda
Thu 21 Mar 2024 01:15:24 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 10/70
7286553
Thu 21 Mar 2024 01:15:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
bfe31d9
Thu 21 Mar 2024 01:25:21 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
52c70c7
Thu 21 Mar 2024 01:31:13 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:27: error: dereferencing ‘void *’ pointer [-Werror]
   79 |     if(valor == elem) pop(*elemento);
      |                           ^~~~~~~~~
exercises.c:79:27: error: invalid use of void expression
cc1: all warnings being treated as errors
Compilation failed
7d49602
Thu 21 Mar 2024 01:31:20 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
25000f2
Thu 21 Mar 2024 01:35:34 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a448ca6
